<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TwitterClient</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_timeline">Home Timeline</string>
    <string name="btnTweet">Tweet</string>
    <string name="compose_hint">What\'s up?</string>
    <string name="toastEmptyTweet">Empty tweet</string>
    <string name="example_username">\@m3libea</string>
    <string name="example_name">Rocio Romero</string>
    <string name="example_body">This is a test</string>
    <string name="example_Date">2 min ago</string>
    <string name="example_date_format">26th September 2017</string>
    <string name="connection_error">Connection not available</string>
    <string name="dialog_message">Do you want to save the tweet as a draft?</string>
    <string name="dialog_title">No empty tweet</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="toastDraftSaved">Draft saved</string>
    <string name="toastDraftNoSaved">Tweet not saved</string>
    <string name="toastTweetCreated">Tweet replied</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_logout">Log out</string>
    <string name="dialog_logout">Do you want to log out?</string>
    <string name="dialog_title_logout">Log out</string>
    <string name="example_location">San Francisco, CA</string>
    <string name="example_followers">459 followers</string>
    <string name="example_following">432 following</string>
    <string name="example_rt">13,9</string>
    <string name="example_lk">4</string>
</resources>