<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="user" type="com.codepath.apps.twitterclient.models.User"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
            <android.support.v7.widget.Toolbar
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            app:layout_anchor="@id/appBar"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <ImageView
                android:id="@+id/ivBanner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp150"
                tools:src="@mipmap/ic_launcher"
                android:background="@color/primary"/>
            <ImageView
                android:id="@+id/ivProfile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_below="@id/ivBanner"
                android:layout_marginTop="-40dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="16dp"
                android:padding="@dimen/dp5"
                tools:src="@mipmap/ic_launcher"
                android:background="@drawable/bk_profile"/>

            <LinearLayout
                android:id="@+id/llFirstLine"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_below="@id/ivProfile"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dp20"
                    android:textSize="@dimen/dp24"
                    android:text="@{user.name}"
                    android:textColor="@color/primary_dark"
                    tools:text="@string/example_name"/>
                <ImageView
                    android:id="@+id/ivVerified"
                    android:layout_width="@dimen/dp20"
                    android:layout_height="@dimen/dp20"
                    android:layout_below="@id/tvUsername"
                    android:layout_margin="@dimen/dp5"
                    android:layout_gravity="center_vertical"
                    android:visibility="gone"
                    android:background="@drawable/ic_twitter_verified"/>


            </LinearLayout>

            <TextView
                android:id="@+id/tvScreenname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llFirstLine"
                android:paddingLeft="@dimen/dp20"
                android:textSize="@dimen/dp15"
                android:text="@{`@` + user.screenName}"
                android:textColor="@color/lightText"
                android:layout_marginBottom="@dimen/dp5"
                tools:text="@string/example_username"/>
            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvScreenname"
                android:paddingLeft="@dimen/dp20"
                android:paddingRight="@dimen/dp20"
                android:textSize="@dimen/dp15"
                android:text="@{user.description}"
                android:textColor="@color/textPrimary"
                android:autoLink="all"
                tools:text="@string/example_body"/>
            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvDescription"
                android:paddingLeft="@dimen/dp20"
                android:textSize="@dimen/dp15"
                android:textColor="@color/lightText"
                android:text="@{user.location}"
                android:layout_marginTop="@dimen/dp10"
                tools:text="@string/example_location"/>
            <LinearLayout
                android:id="@+id/llFollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/tvLocation"
                android:layout_marginBottom="@dimen/dp10">
                <TextView
                    android:id="@+id/tvFollowing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dp20"
                    android:textSize="@dimen/dp15"
                    android:textColor="@color/primary"
                    android:text="@{user.CFollowing + ` Following`}"
                    tools:text="@string/example_following"/>
                <TextView
                    android:id="@+id/tvFollowers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dp20"
                    android:textSize="@dimen/dp15"
                    android:textColor="@color/primary"
                    android:text="@{user.CFollowers + ` Followers`}"
                    tools:text="@string/example_followers"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:id="@+id/viewl"
                android:layout_height="1dp"
                android:background="@color/separators"
                android:layout_below="@id/llFollowers"/>
            <FrameLayout
                android:id="@+id/fmTimeline"
                android:layout_width="match_parent"
                android:layout_below="@id/viewl"
                android:layout_height="match_parent"/>

        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>
